--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4",
-    "vite": "^3.2.3"
+    "vite": "^3.2.3",
+    "vuex": "^4.1.0"
   }
 }
